@@ -12,9 +12,6 @@ asymptote 2.13 - checked 19jun11
 chktex 1.6.4 - checked 25apr11
   http://baruch.ev-en.org/proj/chktex/chktex-1.6.4.tar.gz
 
-dialog 1.1-20110707 - checked 21jul11
-  ftp://invisible-island.net/dialog/dialog.tar.gz
-
 ps2eps 1.68 - checked 25apr11
   http://tm.uka.de/~bless/ps2eps
 
